--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Puerto Princesa Gyms</title>
+    <meta
+      name="google-site-verification"
+      content="Bum79dhvef8GaFVH9uTK_vELCiRqBhxPxQtUMbEK7UM"
+    />
   </head>
   <body class="antialiased">
     <div id="app"></div>
