--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Puerto Princesa Gyms</title>
+    <link
+      rel="icon"
+      type="image/png"
+      href="/my-favicon/favicon-96x96.png"
+      sizes="96x96"
+    />
+    <link rel="icon" type="image/svg+xml" href="/my-favicon/favicon.svg" />
+    <link rel="shortcut icon" href="/my-favicon/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/my-favicon/apple-touch-icon.png"
+    />
+    <meta name="apple-mobile-web-app-title" content="PPC Gyms" />
+    <link rel="manifest" href="/my-favicon/site.webmanifest" />
     <meta
       name="google-site-verification"
       content="Bum79dhvef8GaFVH9uTK_vELCiRqBhxPxQtUMbEK7UM"
