feat(seo): add og:image, meta tags, robots.txt, and OG banner
- Update index.html: new title, meta description, preconnect hints for Google Maps APIs
- GymListAll.vue: add og:image, og:url, og:type to useSeoMeta
- GymList.vue: add og:image, og:type, canonical URL, richer meta description
- GymNotFound.vue: add noindex robots directive via useSeoMeta
- Add public/robots.txt allowing all crawlers with sitemap reference
- Add public/og-banner.jpg (1200x630) for social link previews

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Puerto Princesa Gyms</title>
+    <title>Find Gyms in Puerto Princesa - Complete Gym Directory</title>
+    <meta
+      name="description"
+      content="Browse all gyms in Puerto Princesa, Palawan. Find fitness centers, boxing gyms, and more on our interactive map."
+    />
+    <link rel="preconnect" href="https://maps.googleapis.com" />
+    <link rel="preconnect" href="https://maps.gstatic.com" crossorigin />
     <link
       rel="icon"
       type="image/png"
