feat(seo): add static OG fallback tags and restructure index.html head

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -3,13 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Find Gyms in Puerto Princesa - Complete Gym Directory</title>
     <meta
       name="description"
       content="Browse all gyms in Puerto Princesa, Palawan. Find fitness centers, boxing gyms, and more on our interactive map."
     />
-    <link rel="preconnect" href="https://maps.googleapis.com" />
-    <link rel="preconnect" href="https://maps.gstatic.com" crossorigin />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://puertoprincesagyms.vercel.app/" />
+    <meta
+      property="og:title"
+      content="Find Gyms in Puerto Princesa - Complete Gym Directory"
+    />
+    <meta
+      property="og:description"
+      content="Browse all gyms in Puerto Princesa, Palawan. Find fitness centers, boxing gyms, and more on our interactive map."
+    />
+    <meta
+      property="og:image"
+      content="https://puertoprincesagyms.vercel.app/og-banner.jpg"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta
+      property="og:image:alt"
+      content="Puerto Princesa Gyms - Interactive Gym Map & Directory"
+    />
+
     <link
       rel="icon"
       type="image/png"
@@ -25,10 +46,14 @@
     />
     <meta name="apple-mobile-web-app-title" content="PPC Gyms" />
     <link rel="manifest" href="/my-favicon/site.webmanifest" />
+
     <meta
       name="google-site-verification"
       content="Bum79dhvef8GaFVH9uTK_vELCiRqBhxPxQtUMbEK7UM"
     />
+
+    <link rel="preconnect" href="https://maps.googleapis.com" />
+    <link rel="preconnect" href="https://maps.gstatic.com" crossorigin />
   </head>
   <body class="antialiased">
     <div id="app"></div>
