feat(seo): enhance SEO with dynamic sitemap generation and meta tags

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <meta name="robots" content="index, follow" />
     <title>Find Gyms in Puerto Princesa - Complete Gym Directory</title>
     <meta
       name="description"
@@ -46,7 +46,7 @@
     />
     <meta name="apple-mobile-web-app-title" content="PPC Gyms" />
     <link rel="manifest" href="/my-favicon/site.webmanifest" />
-
+    <link rel="canonical" href="https://puertoprincesagyms.vercel.app/" />
     <meta
       name="google-site-verification"
       content="Bum79dhvef8GaFVH9uTK_vELCiRqBhxPxQtUMbEK7UM"
